@@ -1,3 +1,8 @@
+2008-04-06  Jens Granseuer  <jensgr@gmx.net>
+
+	* sound-properties-capplet.c: (device_added_callback): don't show
+	modems in the device chooser (bug #523888)
+
 2008-03-24  Jaap A. Haitsma  <jaap@haitsma.org>
 
 	* visual-bell.png: New tango icon
